--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,26 @@ vk-api==11.9.1
 waitress==2.0.0
 Werkzeug==1.0.1
 WTForms==2.3.3
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-WTF==0.14.3
+greenlet==1.0.0
+idna==2.10
+importlib-metadata==3.10.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lo==0.2.0
+MarkupSafe==1.1.1
+requests==2.25.1
+six==1.15.0
+SQLAlchemy==1.4.7
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+vk-api==11.9.1
+waitress==2.0.0
+Werkzeug==1.0.1
+WTForms==2.3.3
+zipp==3.4.1
