--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==1.1.1
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+schedule==1.1.0
 six==1.15.0
 SQLAlchemy==1.4.7
 sqlparse==0.4.1
